[gd_scene load_steps=4 format=3 uid="uid://b11cb0nlajjyc"]

[ext_resource type="Texture2D" uid="uid://bofl1xjtuif8f" path="res://images/Slots/gambling.png" id="1_j4mng"]
[ext_resource type="Script" uid="uid://bwm80h38fp2aw" path="res://slots.gd" id="1_wychi"]
[ext_resource type="FontFile" uid="uid://dsfjwnigfts2v" path="res://images/ARCADECLASSIC.TTF" id="3_lcs40"]

[node name="Slots" type="Node2D"]
script = ExtResource("1_wychi")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 325)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_j4mng")

[node name="ButtonScale" type="Node2D" parent="."]
position = Vector2(747.99994, 194.99998)
scale = Vector2(0.2, 0.2)

[node name="Button" type="Button" parent="ButtonScale"]
self_modulate = Color(1, 0, 0, 1)
offset_left = 940.0
offset_top = 272.0
offset_right = 958.0
offset_bottom = 303.0
scale = Vector2(17.98423, 13.802739)
theme_override_fonts/font = ExtResource("3_lcs40")
theme_override_font_sizes/font_size = 36
action_mode = 0

[node name="Slot_Images" type="Node2D" parent="."]

[node name="Slot1" type="Sprite2D" parent="Slot_Images"]
position = Vector2(362, 325)
scale = Vector2(0.2, 0.25)

[node name="Button" type="Button" parent="Slot_Images/Slot1"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -419.99994
offset_top = -343.00006
offset_right = -411.99994
offset_bottom = -335.00006
scale = Vector2(105.720825, 84.46407)
theme_override_fonts/font = ExtResource("3_lcs40")
action_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Slot_Images/Slot1"]
custom_minimum_size = Vector2(1000, 0)
offset_left = -505.0
offset_top = 364.00006
offset_right = 495.0
offset_bottom = 489.00006
theme_override_fonts/font = ExtResource("3_lcs40")
theme_override_font_sizes/font_size = 61
autowrap_mode = 2

[node name="Slot2" type="Sprite2D" parent="Slot_Images"]
position = Vector2(576, 325)
scale = Vector2(0.2, 0.25)

[node name="Button" type="Button" parent="Slot_Images/Slot2"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -424.99994
offset_top = -348.0
offset_right = -416.99994
offset_bottom = -340.0
scale = Vector2(107.36712, 85.15422)
theme_override_fonts/font = ExtResource("3_lcs40")
action_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Slot_Images/Slot2"]
custom_minimum_size = Vector2(1000, 0)
offset_left = -510.0
offset_top = 367.33347
offset_right = 490.0
offset_bottom = 492.33347
theme_override_fonts/font = ExtResource("3_lcs40")
theme_override_font_sizes/font_size = 61
autowrap_mode = 2

[node name="Slot3" type="Sprite2D" parent="Slot_Images"]
position = Vector2(784, 325)
scale = Vector2(0.2, 0.25)

[node name="Button" type="Button" parent="Slot_Images/Slot3"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -421.9999
offset_top = -346.99997
offset_right = -413.9999
offset_bottom = -338.99997
scale = Vector2(110.647644, 87.22928)
theme_override_fonts/font = ExtResource("3_lcs40")
action_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Slot_Images/Slot3"]
custom_minimum_size = Vector2(1000, 0)
offset_left = -490.0
offset_top = 367.33347
offset_right = 510.0
offset_bottom = 492.33347
theme_override_fonts/font = ExtResource("3_lcs40")
theme_override_font_sizes/font_size = 61
autowrap_mode = 2

[connection signal="pressed" from="ButtonScale/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Slot_Images/Slot1/Button" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="Slot_Images/Slot2/Button" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="Slot_Images/Slot3/Button" to="." method="_on_button3_pressed"]
